Updated Resume and Website

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#leadership">Leadership</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#community">Community Service</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">Courses</a></li>
                 </ul>
             </div>
@@ -45,7 +46,7 @@
                         <span class="text-primary">Kensinger</span>
                     </h1>
                     <h3 class="text-secondary">
-                        Aspiring Software Engineer and Web Developer
+                        Aspiring Software Engineer
                     </h3>
                     <div class="subheading mb-5">
                         New York City Metropolitan Area · (570) 688-7860 ·
@@ -53,20 +54,21 @@
                     </div>
                     <p class="lead">
                         I am currently a senior studying Computer Science at Stevens Institute of Technology
-                        with my expected graduation in December 2022.
+                        with my expected graduation date in May 2023.
                     </p>
                     <p class="lead">
-                        Upon graduation I will be completing my Master's degree in Computer Science and Machine
-                        Learning at Stevens Institute of Technology with my graduate graduation in December 2023.
+                        Upon graduation I will be completing my Master's degree in Machine
+                        Learning at Stevens Institute of Technology with my graduate graduation date in May 2024.
                     </p>
                     <p class="lead mb-5">
-                        Over my academic career I have become very passionate in web development and plan on
-                        pursuing a similar role in my future.
+                        Over my academic career, I have become passionate in multiple disciplines including Computer Science,
+                        Machine Learning, Mathematics, Cyber Security, Philosophy, and Ethics. I plan to use my multidisciplinary
+                        background in academia to tackle difficult problems within the industry.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/tristan-kensinger/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/TristanKensinger"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="./public/pdf/Tristan_Kensinger_Resume.pdf"><i class="far fa-file"></i></a>
+                        <a class="social-icon" href="./public/pdf/Tristan_Kensinger_Resume_4:6:23.pdf"><i class="far fa-file"></i></a>
                     </div>
                 </div>
             </section>
@@ -75,6 +77,19 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer Intern</h3>
+                            <div class="subheading mb-3">Cvent</div>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Incoming Summer 2023 software engineer intern.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jun 2023 – Aug 2023 | Remote</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Analyst Intern</h3>
@@ -116,7 +131,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Aug 2022 – present | Hoboken, NJ</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2022 – Dec 2022 | Hoboken, NJ</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -179,16 +194,16 @@
                             <h3 class="mb-0">Stevens Institute of Technology</h3>
                             <div class="subheading mb-3">B.S. Computer Science</div>
                             <p>GPA: <b>3.91</b> out of 4.0</p>
-                            <p>Minor in Pure and Applied Mathematics</p>
+                            <p>Minors: Pure and Applied Mathematics, Cyber Security</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sep 2019 – Dec 2022 | Hoboken, NJ</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2019 – May 2023 | Hoboken, NJ</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Stevens Institute of Technology</h3>
-                            <div class="subheading mb-3">M.S. Computer Science & Machine Learning</div>
+                            <div class="subheading mb-3">M.S. Machine Learning</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Dec 2022 – Dec 2023 | Hoboken, NJ</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2023 – May 2024 | Hoboken, NJ</span></div>
                     </div>
                 </div>
             </section>
@@ -255,6 +270,17 @@
                     <h2 class="mb-5">Leadership</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Philanthropy Chair of Chi Psi Fraternity</h3>
+                            <div class="subheading mb-3">1,000+ Dollars Raised for Charity</div>
+                            <p>
+                                Create, plan, and lead philanthropy events in order to raise money for the Hoboken Homeless
+                                Shelter and help brothers reach their required service hours for the semester.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2023 – May 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Vice President and House Manager of Chi Psi Fraternity</h3>
                             <p>
                                 Responsibilities included leading 20+ brothers, budgeting an
@@ -265,6 +291,24 @@
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2022 – May 2022</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Community Service-->
+            <section class="resume-section" id="community">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Community Service</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Soup Kitchen Volunteer</h3>
+                            <div class="subheading mb-3">100+ Hours Served</div>
+                            <p>
+                                Responsible for preparing breakfast and lunch, training new volunteers, serving food, handing out donations, 
+                                cleaning dishes and all common areas, and running errands required to keep the soup kitchen operational.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2022 – Present</span></div>
                     </div>
                 </div>
             </section>
@@ -313,6 +357,14 @@
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                             Artificial Intelligence
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Number Theory
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Cryptography
                         </li>
                     </ul>
                 </div>
