Updated socials formatting

--- a/index.html
+++ b/index.html
@@ -65,11 +65,25 @@
                         Machine Learning, Mathematics, Cyber Security, Philosophy, and Ethics. I plan to use my multidisciplinary
                         background in academia to tackle difficult problems within the industry.
                     </p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/tristan-kensinger/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/TristanKensinger"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="./public/pdf/Tristan_Kensinger_Resume_4:6:23.pdf"><i class="far fa-file"></i></a>
-                    </div>
+                    <div class="container">
+                        <div class="row text-center">
+                          <div class="col-12 col-lg-4 my-2">
+                            <a class="btn btn-primary w-100 btn-block" style="background-color: #55acee;" href="https://www.linkedin.com/in/tristan-kensinger/" role="button">
+                                <i class="fas fa-users me-2"></i>LinkedIn
+                            </a>
+                          </div>
+                          <div class="col-12 col-lg-4 my-2">
+                            <a class="btn btn-primary w-100 btn-block" style="background-color: #55acee;" href="https://github.com/TristanKensinger" role="button">
+                                <i class="fab fa-github me-2"></i>Github
+                            </a>
+                          </div>
+                          <div class="col-12 col-lg-4 my-2">
+                            <a class="btn btn-primary w-100 btn-block" style="background-color: #55acee;" href="./public/pdf/Tristan_Kensinger_Resume_4:6:23.pdf" role="button">
+                                <i class="far fa-file-pdf me-2"></i>Resume
+                            </a>
+                          </div>
+                        </div>
+                    </div>                     
                 </div>
             </section>
             <hr class="m-0" />
