Updated resume and website information 8-15-23

--- a/index.html
+++ b/index.html
@@ -53,17 +53,13 @@
                         <a href="mailto:tristan.kensinger@gmail.com">tristan.kensinger@gmail.com</a>
                     </div>
                     <p class="lead">
-                        I am currently a senior studying Computer Science at Stevens Institute of Technology
-                        with my expected graduation date in May 2023.
+                        I am currently a masters student studying Machine Learning at Stevens Institute of Technology seeking full-time software engineering roles with my expected graduation date in May 2024.
                     </p>
                     <p class="lead">
-                        Upon graduation I will be completing my Master's degree in Machine
-                        Learning at Stevens Institute of Technology with my graduate graduation date in May 2024.
+                        I have 4 years of industry experience working in frontend and backend development and have many successes creating innovative, efficient, and robust software. Over this time, I have honed in my ability to excel in a professional environment and communicate effectively with team members.
                     </p>
                     <p class="lead mb-5">
-                        Over my academic career, I have become passionate in multiple disciplines including Computer Science,
-                        Machine Learning, Mathematics, Cyber Security, Philosophy, and Ethics. I plan to use my multidisciplinary
-                        background in academia to tackle difficult problems within the industry.
+                        Over my academic career, I have become passionate in multiple disciplines including Computer Science, Machine Learning, Mathematics, Cyber Security, Philosophy, and Ethics. I plan to use my multidisciplinary background in academia to tackle difficult problems within the industry and ultimately better the human condition.
                     </p>
                     <!-- Socials Links -->
                     <div class="container">
@@ -79,7 +75,7 @@
                             </a>
                           </div>
                           <div class="col-12 col-lg-4 my-2">
-                            <a class="btn btn-primary w-100 btn-block" style="background-color: #55acee;" href="./public/pdf/Tristan_Kensinger_Resume_4:6:23.pdf" role="button">
+                            <a class="btn btn-primary w-100 btn-block" style="background-color: #55acee;" href="./public/pdf/Tristan_Kensinger_Resume_8:15:23.pdf" role="button">
                                 <i class="far fa-file-pdf me-2"></i>Resume
                             </a>
                           </div>
@@ -99,7 +95,19 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    Incoming Summer 2023 software engineer intern.
+                                    Implemented payload compression on a framework level improving performance of consuming applications by 83% | Frontend, React, Typescript, Redux
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Updated Java service to Java version 17, added or modified 25+ files, and pushed changes to production | Frontend, Backend, Java, Maven. Splunk, Datadog, Junit, IntelliJ
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Fixed security vulnerabilities in 2 Java services and demonstrated new vulnerable dependency fix workflow to team | Security, Java, Maven, OWASP, Mend
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Cleaned up Java service codebase, removed 5 API endpoints, removed or modified 30+ files, and pushed changes to production and monitored efficacy in the following days | Backend, Java, Maven, Datadog, Splunk, Postman, IntelliJ
                                 </li>
                             </ul>
                         </div>
@@ -114,39 +122,26 @@
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Fully developed the frontend and backend of a website that
                                     allows users to log in and analyze their boiler's data in order to
-                                    improve efficiency and performance (Python, Flask, Jinja,
-                                    JavaScript, HTML, CSS, Bootstrap 5, Ajax, and jQuery).
+                                    improve efficiency and performance | Python, Flask, Jinja,
+                                    JavaScript, HTML, CSS, Bootstrap 5, Ajax, and jQuery
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Researched and created documentation for the API used by the
-                                    boiler's hardware.
+                                    boiler's hardware | Postman, Chrome Developer Tools
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    Deployed my website with Google Cloud's App Engine.
+                                    Deployed my website with Google Cloud's App Engine | GCP
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Created statistical tests and graphs to analyze boiler data in
-                                    order to improve efficiency and performance.
+                                    order to improve efficiency and performance | Python
                                 </li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2022 – Aug 2022 | East Stroudsburg, PA</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Programming Course Assistant</h3>
-                            <div class="subheading mb-3">Stevens Institute of Technology</div>
-                            <ul class="fa-ul mb-0">
-                                <li>
-                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    Hold office hours, run labs, and grade assignments.
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Aug 2022 – Dec 2022 | Hoboken, NJ</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -156,23 +151,36 @@
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Spearheaded efforts in upgrading the HMI software for the Flu
-                                    Incubation Buildings.
+                                    Incubation Buildings
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Responsible for initial research, planning and managing the
                                     project, frontend and backend development, updating
                                     databases, and creating a transition document for future
-                                    employees to continue the project.
+                                    employees to continue the project
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                                     Created a new hire programming standards document and
-                                    automated various manual tasks using python.
+                                    automated various manual tasks using python
                                 </li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2020 – Aug 2021 | Swiftwater, PA</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Web Programming Course Assistant</h3>
+                            <div class="subheading mb-3">Stevens Institute of Technology</div>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Held office hours, ran labs, and graded assignments
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2022 – Dec 2022 | Hoboken, NJ</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -181,21 +189,21 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    I work for Norman J. Morgenstern Horing, author of Quantum
+                                    Worked for Norman J. Morgenstern Horing, author of Quantum
                                     Statistical Field Theory.                                    
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    Type written manuscripts into publishable articles using
-                                    LaTeX.
+                                    Typed written manuscripts into publishable articles using
+                                    LaTeX
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
-                                    Format complicated equations and train new employees.
+                                    Formatted complex equations and trained new employees
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sep 2019 – present | Hoboken, NJ</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2019 – May 2023 | Hoboken, NJ</span></div>
                     </div>
                 </div>
             </section>
@@ -204,6 +212,14 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Stevens Institute of Technology</h3>
+                            <div class="subheading mb-3">M.S. Machine Learning</div>
+                            <p>GPA: <b>4.0</b> out of 4.0</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2023 – May 2024 | Hoboken, NJ</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Stevens Institute of Technology</h3>
@@ -212,13 +228,6 @@
                             <p>Minors: Pure and Applied Mathematics, Cyber Security</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2019 – May 2023 | Hoboken, NJ</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Stevens Institute of Technology</h3>
-                            <div class="subheading mb-3">M.S. Machine Learning</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sep 2023 – May 2024 | Hoboken, NJ</span></div>
                     </div>
                 </div>
             </section>
@@ -229,19 +238,23 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Frontend Development</div>
                     <p>
-                        HTML 5 · CSS 3 · JavaScript · Bootstrap 5 · Handlebars · Jinja · jQuery · Ajax
+                        Javascript · Typescript · React · Redux · HTML · CSS · Bootstrap 5 · Handlebars · Jinja · jQuery · Ajax
                     </p>
                     <div class="subheading mb-3">Backend Development</div>
                     <p>
-                        Node.js · Flask · Express.js · JavaScript · Python
+                        Java · Python · Flask · Node.js · Express.j
                     </p>
                     <div class="subheading mb-3">Programming Languages</div>
                     <p>
-                        Java · Python · C++ · C · JavaScript · OCAML · Erlang
+                        Java · Python · C++ · C · JavaScript · Typescript · OCAML · Erlang · R
+                    </p>
+                    <div class="subheading mb-3">Development Tools</div>
+                    <p>
+                        Git · Jira · Jenkins · Figma · LaTeX · Datadog · Splunk · IntelliJ · Postman              
                     </p>
                     <div class="subheading mb-3">Other</div>
                     <p>
-                        MongoDB · SQL · Git · Linux · Windows · Figma · LaTeX                       
+                        Linux · Windows · MongoDB · SQL · AWS · GCP · Maven · Junit · Security · Agile · Development                
                     </p>
                 </div>
             </section>
@@ -257,7 +270,7 @@
                             <p>
                                 A lightweight version of a speedrunning website that
                                 allows users to post their speedruns and take part in
-                                friendly forum posts.
+                                friendly forum posts
                             </p>
                             <a class="project-link" href="https://github.com/TristanKensinger/Split">Project Link</a>
                         </div>
@@ -271,7 +284,7 @@
                                 A 3D version of the acclaimed website NUKEMAP
                                 under Alex Wellerstein. I was the lead engineer in
                                 charge of the 3D models and web integration as well
-                                as mathematical scaling of assets.
+                                as mathematical scaling of assets
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2021 – May 2022</span></div>
@@ -318,10 +331,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Soup Kitchen Volunteer</h3>
                             <div class="subheading mb-3">100+ Hours Served</div>
-                            <p>
-                                Responsible for preparing breakfast and lunch, training new volunteers, serving food, handing out donations, 
-                                cleaning dishes and all common areas, and running errands required to keep the soup kitchen operational.
-                            </p>
+                            <ul>
+                                <li>
+                                    Volunteer weekly at local soup kitchen
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                                    Responsible for preparing breakfast and lunch, training new volunteers, serving food, handing out donations, cleaning dishes and all common areas, and running errands required to keep the soup kitchen operational
+                                </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2022 – Present</span></div>
                     </div>
@@ -380,6 +398,22 @@
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
                             Cryptography
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Linear Algebra
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Calculus
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Systems Programming
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-circle fa-2xs"></i></span>
+                            Concurrent Programming
                         </li>
                     </ul>
                 </div>
